added combined news slider on landing page with category stripe

--- a/src/app/components/news-card/news-card.component.html
+++ b/src/app/components/news-card/news-card.component.html
@@ -1,4 +1,5 @@
 <div  class="newsCard">
+  <div class="categoryStripe">{{displayCategory}}</div>
   <img class="articleImage" src="{{imageUrl}}" />
   <div class="body">
     <span>{{dateString}}</span>
