--- a/src/app/components/news-card/news-card.component.scss
+++ b/src/app/components/news-card/news-card.component.scss
@@ -1,7 +1,16 @@
 .newsCard {
   height: 100%;
+  position: relative;
   @apply
   bg-white;
+  .categoryStripe {
+    position: absolute;
+    background: rgba(94, 39, 39, 0.87);
+    min-width: 50%;
+    top: 15px;
+    padding: 5px;
+    color: white;
+  }
   .articleImage {
     @apply 
     h-32
