--- a/src/app/components/featured-article-card/featured-article-card.component.scss
+++ b/src/app/components/featured-article-card/featured-article-card.component.scss
@@ -11,6 +11,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: flex-start;
     height: 100%;
     min-height: 400px;
     padding: 40px 50px 50px;
@@ -18,6 +19,13 @@
     @include media-breakpoint-sm {
       padding: 5px 10px 5px;
       min-height: 300px;
+    }
+    .categoryStripe {
+      padding: 5px;
+      font-size: 12px;
+      margin-bottom: 10px;
+      background: rgba(94, 39, 39, 0.87);
+
     }
     .cardTitle {
       @apply 
