--- a/src/app/components/appointment-widget/appointment-widget.component.html
+++ b/src/app/components/appointment-widget/appointment-widget.component.html
@@ -15,6 +15,8 @@
       </div>
 
     </div>
-
+    <div class="archivButtonWrapper">
+      <button [routerLink] = "['/termin-archiv']">Terminarchiv</button>
+    </div>
   </div>
 </div>
