--- a/src/app/components/downloads-wrapper/downloads-wrapper.component.scss
+++ b/src/app/components/downloads-wrapper/downloads-wrapper.component.scss
@@ -10,7 +10,7 @@ a {
 }
 .fileItem {
     @apply
-    flex justify-between;
+    flex flex-col items-start;
     background: white;
     padding: 10px;
     height: 100%;
@@ -21,14 +21,24 @@ a {
 
         overflow: hidden;
     }
-    .icon {
-        @apply
-        mr-2;
-        height: 20px;
-    }
     .header {
         overflow-wrap: break-word;
     }
+    
+}
+
+.fileInfoWrapper {
+    @apply
+        flex items-center;
+    .icon {
+        @apply
+        mr-1;
+        height: 10px;
+    }
+    .fileUrl {
+        font-size: 11px;
+    }
+
 }
 .fileItem:hover {
     transition: 0.8s;
