--- a/src/app/pages/club-detail/club-detail.component.html
+++ b/src/app/pages/club-detail/club-detail.component.html
@@ -39,7 +39,7 @@
         
       </div>
       <div class="qualifiedPersonWrapper">
-        <app-contact-person-list [qualifiedPersonList]="qualifiedPersonList"></app-contact-person-list>
+        <app-contact-person-list [qualifiedPersonList]="qualifiedPersonList" [clubViewActive]="true"></app-contact-person-list>
 
       </div>
       <!--
