--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,8 +3,8 @@
     <app-page-logo (click)="routeChanged('')"></app-page-logo>
     <div class="navWrapperDesktop">
       <ul class="desktopnNav">
+        <li [class.boldText] = "currentRoute === '/verband'"><a  (click)="routeChanged('/verband')">Verband</a></li>
         <li [class.boldText] = "currentRoute === '/vereine'"><a  (click)="routeChanged('/vereine')">Vereine</a></li>
-
           <!-- 
           <li [class.boldText] = "currentRoute === '/ergebnisse'"><a  (click)="routeChanged('/ergebnisse')">Ergebnisse</a></li>
         -->
@@ -30,6 +30,7 @@
     <li>Ergebnisse</li>
     <li>Vereine</li>
     -->
+    <li (click)="routeChanged('/verband')">Verband</li>
     <li (click)="routeChanged('/vereine')">Vereine</li>
     <li (click)="routeChanged('/jugend')">Jugend</li>
     <li (click)="routeChanged('/auswahl-kader')">Auswahlkader</li>
