fixed wrong news carousel

--- a/src/app/components/editorjs-wrapper/editorjs-wrapper.component.scss
+++ b/src/app/components/editorjs-wrapper/editorjs-wrapper.component.scss
@@ -6,7 +6,7 @@
 }
 .linkItem {
   div {
-    @apply bg-white p-2 hover:shadow-md hover:underline;
+    @apply bg-white p-2 hover:shadow-md hover:underline mt-2 mb-2;
 
     background: white;
   }
