--- a/src/app/pages/selection-squad/selection-squad.component.scss
+++ b/src/app/pages/selection-squad/selection-squad.component.scss
@@ -19,6 +19,12 @@
     }
   }
 
+  .featuredPersonGrid {
+    @apply 
+    grid gap-2 grid-cols-1 mb-2
+    lg:grid-cols-2;
+  }
+
   .teamGrid {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
