--- a/src/app/pages/selection-squad/selection-squad.component.html
+++ b/src/app/pages/selection-squad/selection-squad.component.html
@@ -13,6 +13,7 @@
 
       <app-featured-person
       *ngFor="let item of qualifiedPersons; index as i"
+      [position]="item.position"
       [imageUrl]="item.profilImage"
       [name]="item.name"
       [surname]="item.surname"
