adde ssr support

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="homeWrapper" @fadeIn>
+<div class="homeWrapper">
   <app-featured-article-card *ngIf="posts[0]" [postId]="posts[0].id" [imageUrl]="posts[0].Artikelbild" [title]="posts[0].Titel" [shortText]="posts[0].Kurzbeschreibung" [ctaText]="'Zum Artikel'" [type]="posts[0].type"></app-featured-article-card>
   <h2 class="sectionTitle">Weitere Neuigkeiten</h2>
   <div class="newsArea">
